# whale

./: .gitignore  Cargo.toml  README.md  build.rs  download-spec-tests.py  rustfmt.toml  stair_climb.wat
.github/workflows/: main.yml
benches/: wasm_programs.rs
examples/game-of-life/: Cargo.toml  README.md
examples/game-of-life/src/: main.rs
examples/game-of-life/wasm/: Makefile  game.c  game.wasm
programs/: Makefile  ackermann.c  ackermann.wasm  binary_search.c  binary_search.wasm  bulk_memory.c  bulk_memory.wasm  call_chain.c  call_chain.wasm  fibonacci.c  fibonacci.wasm  indirect_call.c  indirect_call.wasm  linked_list.c  linked_list.wasm  mandelbrot.c  mandelbrot.wasm  matrix.c  matrix.wasm  matrix_chain.c  matrix_chain.wasm  nbody.c  nbody.wasm  sha256.c  sha256.wasm  sieve.c  sieve.wasm  sort.c  sort.wasm  stair_climb.wasm  switch_dispatch.c  switch_dispatch.wasm
src/: binary_grammar.rs  compiled_interpreter.rs  compiler.rs  error.rs  execution_grammar.rs  grammar.rs  interpreter.rs  ir.rs  leb128.rs  lib.rs  main.rs  memory.rs  module.rs  numerics.rs  parser.rs  snapshot.rs  store.rs  value_stack.rs
tests/: programs.rs  snapshot_test.rs  spec_tests.rs
